tests/snapshots/parser_tests__get_with_options_skipping_variables_without_snapshot.snap
---
source: tests/parser_tests.rs
assertion_line: 44
expression: result
---
HttpFile {
    options: SnapOptions {
        include_headers: false,
    },
    verb: GET,
    url: "https://localhost:5000/today",
    headers: [
        Header {
            name: "Accept",
            value: "application/json",
        },
    ],
    body: Json {
        element: Element {
            value: Null,
        },
    },
    snapshot: Snapshot {
        status: Exact(
            Null,
        ),
        headers: [],
        body: JsonComparer {
            element: ElementComparer {
                value: Exact(
                    Null,
                ),
            },
        },
    },
}
