tests/snapshots/parser_tests__post_with_body_and_snapshot.snap
---
source: tests/parser_tests.rs
assertion_line: 84
expression: result
---
HttpFile {
    options: SnapOptions {
        include_headers: true,
    },
    verb: POST,
    url: "https://localhost:5000/items",
    headers: [
        Header {
            name: "Accept",
            value: "application/json",
        },
    ],
    body: Json {
        element: Element {
            value: Object(
                Object {
                    members: [
                        Member {
                            key: "id",
                            value: Element {
                                value: Number(
                                    Int(
                                        5,
                                    ),
                                ),
                            },
                        },
                        Member {
                            key: "fields",
                            value: Element {
                                value: Object(
                                    Object {
                                        members: [
                                            Member {
                                                key: "text",
                                                value: Element {
                                                    value: String(
                                                        "Hello!",
                                                    ),
                                                },
                                            },
                                            Member {
                                                key: "authors",
                                                value: Element {
                                                    value: Array(
                                                        Array {
                                                            elements: [
                                                                Element {
                                                                    value: String(
                                                                        "James Hughes",
                                                                    ),
                                                                },
                                                                Element {
                                                                    value: String(
                                                                        "Eric McBrunch",
                                                                    ),
                                                                },
                                                            ],
                                                        },
                                                    ),
                                                },
                                            },
                                        ],
                                    },
                                ),
                            },
                        },
                    ],
                },
            ),
        },
    },
    snapshot: Snapshot {
        status: Exact(
            Number(
                Int(
                    201,
                ),
            ),
        ),
        headers: [
            HeaderComparer {
                name: "content-type",
                value: Exact(
                    String(
                        "application/json; charset=utf-8",
                    ),
                ),
            },
            HeaderComparer {
                name: "date",
                value: Exact(
                    String(
                        "Wed, 29 Jan 2025 21:08:47 GMT",
                    ),
                ),
            },
            HeaderComparer {
                name: "server",
                value: Exact(
                    String(
                        "Kestrel",
                    ),
                ),
            },
            HeaderComparer {
                name: "location",
                value: Ignore,
            },
            HeaderComparer {
                name: "transfer-encoding",
                value: Exact(
                    String(
                        "chunked",
                    ),
                ),
            },
        ],
        body: JsonComparer {
            element: ElementComparer {
                value: Exact(
                    Object(
                        ObjectComparer {
                            members: [
                                MemberComparer {
                                    key: "id",
                                    value: ElementComparer {
                                        value: Exact(
                                            Number(
                                                Int(
                                                    5,
                                                ),
                                            ),
                                        ),
                                    },
                                },
                            ],
                        },
                    ),
                ),
            },
        },
    },
}
