tests/snapshots/parser_tests__post_without_body_and_without_snapshot.snap
---
source: tests/parser_tests.rs
assertion_line: 39
expression: result
---
HttpFile {
    options: SnapOptions {
        include_headers: true,
    },
    verb: POST,
    url: "https://localhost:5000/items",
    headers: [
        Header {
            name: "Accept",
            value: "application/json",
        },
    ],
    body: Json {
        element: Element {
            value: Null,
        },
    },
    snapshot: Snapshot {
        status: Exact(
            Null,
        ),
        headers: [],
        body: JsonComparer {
            element: ElementComparer {
                value: Exact(
                    Null,
                ),
            },
        },
    },
}
